--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>wechat-reading</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0 minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <link rel="shortcut icon" href="./static/image/246x0w.jpg">
+    <title>微信读书</title>
   </head>
   <body>
     <div id="app"></div>
