--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <link rel="shortcut icon" href="./static/image/weixin.png">
-    <title>微信读书</title>
+    <!-- <link rel="shortcut icon" href="./static/image/weixin.png"> -->
+    <title>红豆读书</title>
     <style>
-        html,body{
-          touch-action: none
+        html,
+        body {
+            touch-action: none
         }
-      </style>
-  </head>
-  <body>
+    </style>
+</head>
+
+<body>
     <div id="app"></div>
-  </body>
+</body>
+
 </html>
